k8s/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haus
  namespace: haus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haus
  template:
    metadata:
      labels:
        app: haus
    spec:
      containers:
        - name: haus
          image: 'ghcr.io/usehaus/haus:v0.0.2' # Check for updates before deploying
          ports:
            - containerPort: 8080
