k8s/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: haus-svc
  namespace: haus
spec:
  selector:
    app: haus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
